added the Tool2.js for the refactored

--- a/amazon.html
+++ b/amazon.html
@@ -6,7 +6,7 @@
     <title>Amazon Price Generator</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='tool.js'></script>
+    <script src='tool2.js'></script>
 </head>
 <body>
     
